<resources>
    <string name="app_name">changeMax医疗健康助手</string>
    <string name="navigation_drawer_open">打开导航抽屉</string>
    <string name="navigation_drawer_close">关闭导航抽屉</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">医疗百科部位分类</string>
    <string name="action_settings">设置</string>
    <string name="bw_toubu">头部</string>
    <string name="bw_jingbu">颈部</string>
    <string name="bw_xiongbu">胸部</string>
    <string name="bw_fubu">腹部</string>
    <string name="bw_yaobu">腰部</string>
    <string name="bw_huiyinbu">会阴部</string>
    <string name="bw_nanxsz">男性生殖</string>
    <string name="bw_nvxsz">女性生殖</string>
    <string name="bw_quanshen">全身</string>
    <string name="bw_shangzhi">上肢</string>
    <string name="bw_xiazhi">下肢</string>
    <string name="bw_penqiang">盆腔</string>
    <string name="bw_tunbu">臀部</string>
    <string name="bw_gu">骨</string>
    <string name="bw_xinli">心理</string>
    <string name="bw_qita">其他</string>
    <string name="disease_name">名称</string>
    <string name="disease_alias">别名：</string>
    <string name="disease_intro">简介：</string>
    <string name="disease_incidence_site">发病部位：</string>
    <string name="disease_contagious">传染性：</string>
    <string name="disease_multiple_people">多发人群：</string>
    <string name="disease_symptom_early">早期症状：</string>
    <string name="disease_symptom_late">晚期症状：</string>
    <string name="disease_symptom_related">相关症状：</string>
    <string name="disease_symptom_intro">相关症状介绍：</string>
    <string name="disease_complication">并发症：</string>
    <string name="disease_complication_intro">并发症介绍：</string>
    <string name="disease_visit_department">就诊科室：</string>
    <string name="disease_cure_rate">治愈率：</string>
    <string name="symptom_name">名称</string>
    <string name="symptom_intro">简介：</string>
    <string name="symptom_cause">起因：</string>
    <string name="symptomatic_details_content">诊断详述：</string>
    <string name="suggested_treatment_department">就诊科室：</string>
    <string name="symptom_association_disease">易发疾病：</string>
    <string name="more">【更多】</string>
    <string name="detailed">【详细】</string>
    <string name="hello_world">Hello world!</string>
    <string name="first_title">Comprehensive</string>
    <string name="first_desc">We collect the best pieces from around the web and combine them into a story</string>
    <string name="second_title">Twice a day</string>
    <string name="second_desc">Top stories delivered yo you twice daily at times you choose</string>
    <string name="third_title">Definitive</string>
    <string name="third_desc">We surface the most important need-to-know news</string>
</resources>